--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- SNS 공유 -->
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="88 (팔팔커뮤니티)">
-<meta property="og:title" content="스포츠 배당 분석기 · 보증 업체 검증 추천 | 88">
+<meta property="og:title" content="스포츠 분석 · 88 인증 놀이터 검증 추천 | 88">
 <meta property="og:description" content="고액 유저 기준 검증 업체 + 스포츠 배당 분석기 제공">
 <meta property="og:url" content="https://88st.cloud/">
 
@@ -618,3 +618,4 @@ async function hitCount(key){
 
 </body>
 </html>
+
