--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@ body{
   color:#fff;
 }
 
+/* ===== 상단 공지/이벤트 배너 (자동 순환) ===== */
+.notice-bar{
+  position:sticky;
+  top:0;
+  z-index:1600;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000;
+  font-weight:900;
+  font-size:13px;
+  padding:10px 12px;
+  text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.notice-bar a{
+  color:#000;
+  text-decoration:none;
+}
+.notice-bar .dot{
+  opacity:.8;
+  margin:0 6px;
+}
+
 /* ===== 로딩 화면 ===== */
 #loader{
   position:fixed;
@@ -91,33 +113,77 @@ body{
   transition: opacity .35s ease;
 }
 
+/* ===== 사칭주의 팝업 (1일 1회) ===== */
+.scam-popup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.75);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:3000;
+  padding:18px;
+}
+.scam-box{
+  background:rgba(17,17,17,.95);
+  border:1px solid rgba(255,255,255,.08);
+  border-radius:18px;
+  padding:22px;
+  width:100%;
+  max-width:380px;
+  text-align:center;
+  box-shadow:0 18px 60px rgba(0,0,0,.75);
+  backdrop-filter: blur(10px);
+}
+.scam-box h3{
+  color:#ff6b6b;
+  margin:0 0 10px;
+  font-weight:900;
+}
+.scam-box p{
+  font-size:13px;
+  color:#ddd;
+  line-height:1.55;
+  margin:0;
+}
+.scam-box .btn{
+  margin-top:12px;
+  padding:12px;
+  border-radius:12px;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000;
+  font-weight:900;
+  cursor:pointer;
+  user-select:none;
+}
+
 /* ===== 상단 ===== */
 .header{
   text-align:center;
   padding:18px 0 8px;
 }
-
-/* ✅ 로고 이미지를 클릭하면 홈 이동 */
 .header .logoLink{
   display:inline-flex;
   align-items:center;
   justify-content:center;
   text-decoration:none;
 }
-
-/* 상단 로고 이미지(반응형) */
 .header .logoImg{
-  width:min(260px, 70vw);
+  width:min(220px, 62vw);
   height:auto;
   display:block;
-  filter: drop-shadow(0 0 18px rgba(212,175,55,.20));
+  padding:10px;
+  border-radius:18px;
+  background:radial-gradient(120px 60px at 50% 40%, rgba(212,175,55,.15), transparent 70%);
+  filter:
+    drop-shadow(0 0 10px rgba(212,175,55,.25))
+    drop-shadow(0 0 24px rgba(212,175,55,.12));
   animation: logoFloat 3.2s ease-in-out infinite;
 }
 @keyframes logoFloat{
   0%,100%{ transform:translateY(0); }
   50%{ transform:translateY(-2px); }
 }
-
 .header .sub{
   font-size:12px;
   color:#9a9a9a;
@@ -166,6 +232,33 @@ body{
   color:var(--muted);
   font-size:13px;
   line-height:1.55;
+}
+
+/* 인사이트: 종목 선택 UI */
+.insight-row{
+  display:flex;
+  gap:8px;
+  align-items:center;
+  margin-top:10px;
+  flex-wrap:wrap;
+}
+select.insight-select{
+  background:rgba(0,0,0,.35);
+  color:#fff;
+  border:1px solid rgba(255,255,255,.12);
+  padding:10px 12px;
+  border-radius:12px;
+  font-weight:800;
+  outline:none;
+}
+.insight-btn{
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  border:none;
+  color:#111;
+  padding:10px 12px;
+  border-radius:12px;
+  font-weight:900;
+  cursor:pointer;
 }
 
 /* 분석기 버튼 */
@@ -261,7 +354,6 @@ body{
   height:100%;
   object-fit:contain;
 }
-
 .content{ padding:10px 10px 12px; }
 .site{ font-size:15px; font-weight:900; }
 .desc{ margin-top:6px; font-size:12px; color:#bdbdbd; line-height:1.35; min-height:32px; }
@@ -315,6 +407,56 @@ body{
   font-weight:900;
 }
 
+/* ===== 업데이트 로그 ===== */
+.log{
+  display:grid;
+  gap:8px;
+}
+.log-item{
+  border:1px solid rgba(255,255,255,.08);
+  background:rgba(0,0,0,.28);
+  border-radius:14px;
+  padding:10px 12px;
+  display:flex;
+  justify-content:space-between;
+  gap:10px;
+  align-items:flex-start;
+}
+.log-date{
+  font-weight:900;
+  color:#f5e27a;
+  font-size:12px;
+  white-space:nowrap;
+}
+.log-text{
+  color:#cfcfcf;
+  font-size:13px;
+  line-height:1.45;
+  flex:1;
+}
+
+/* ===== FAQ ===== */
+.faq details{
+  border:1px solid rgba(255,255,255,.08);
+  background:rgba(0,0,0,.28);
+  border-radius:14px;
+  padding:10px 12px;
+}
+.faq details + details{ margin-top:10px; }
+.faq summary{
+  cursor:pointer;
+  font-weight:900;
+  color:#fff;
+  list-style:none;
+}
+.faq summary::-webkit-details-marker{ display:none; }
+.faq .a{
+  margin-top:8px;
+  color:#cfcfcf;
+  font-size:13px;
+  line-height:1.55;
+}
+
 /* 방문자 */
 #visitorBox{
   text-align:center;
@@ -346,18 +488,78 @@ const CARD_DATA = {
     benefit:"신규 30% / 매충 10% / 페이백 10%",
     notice:"가입코드 미입력 시 혜택 적용 불가" }
 };
+
+/* ===== 인사이트 (종목별) ===== */
+const INSIGHTS_BY_SPORT = {
+  "축구":[
+    "배당이 1~2시간 내 급변하면 라인 조정 구간일 수 있습니다.",
+    "무승부 배당이 갑자기 내려가면 시장은 '언더/조심'을 보는 경우가 많습니다.",
+    "양팀 득점(BTTS) 라인이 흔들리면 선발/부상 뉴스 반영 가능성이 큽니다.",
+    "전반 라인이 움직이면 초반 템포(압박/로테이션)를 체크하세요."
+  ],
+  "농구":[
+    "핸디(스프레드)가 크게 움직이면 핵심 선수 결장/로테 반영일 수 있습니다.",
+    "OU(언더오버) 하락은 페이스 다운/수비 지표 반영 가능성이 큽니다.",
+    "백투백 일정은 4Q 클러치에서 체력 영향이 큽니다.",
+    "홈코트 이점이 큰 팀은 초반 라인이 유리하게 잡히는 경우가 많습니다."
+  ],
+  "야구":[
+    "선발 변경은 배당 구조가 통째로 바뀌니 최신 라인을 우선 확인하세요.",
+    "불펜 소모가 큰 팀은 후반 이닝 변동성이 큽니다.",
+    "바람/구장 특성은 OU에 크게 영향을 줍니다.",
+    "승패보다 5이닝(1st5) 라인이 더 깔끔할 때가 있습니다."
+  ],
+  "배구":[
+    "세트 핸디가 흔들리면 주전 로테/컨디션 이슈 가능성이 있습니다.",
+    "서브/리시브 지표 차이가 크면 언더독도 세트를 가져갈 수 있습니다.",
+    "원정 장거리 이동은 집중력 이슈로 초반 세트에 영향을 줄 수 있습니다.",
+    "전력 차가 크면 OU보다 -1.5 세트가 더 안정적일 때가 있습니다."
+  ],
+  "e스포츠":[
+    "맵 풀/밴픽 상성이 라인보다 중요할 때가 많습니다.",
+    "로스터 교체 직후는 변동성이 커서 보수적으로 접근하세요.",
+    "언더독이 특정 맵에서 강하면 세트/맵 핸디를 확인하세요.",
+    "최근 5경기보다 상대전적/메타 적응력을 같이 보세요."
+  ],
+  "하키":[
+    "골리(선발 골텐더) 변경은 승/OU에 큰 영향이 있습니다.",
+    "백투백 원정은 수비 붕괴로 고득점 게임이 나올 수 있습니다.",
+    "파워플레이 효율 차이는 언더독 변수로 작용합니다.",
+    "초반 10분 라인이 흔들리면 경기 템포 이슈 가능성이 큽니다."
+  ]
+};
 </script>
 </head>
 
 <body>
 
+<!-- ✅ 상단 공지/이벤트 배너(자동 순환) -->
+<div class="notice-bar">
+  <a id="noticeLink" href="https://t.me/UZU59" target="_blank" rel="noopener">
+    <span id="noticeText"></span>
+  </a>
+</div>
+
 <!-- ✅ 로딩 화면 -->
 <div id="loader">
   <div class="logoWrap">
-    <!-- 로딩용 로고도 같은 이미지 사용 -->
     <img src="img/logo.png" alt="88 로고 로딩">
   </div>
   <div class="text">Loading...</div>
+</div>
+
+<!-- ✅ 사칭주의 팝업 (1일 1회) -->
+<div class="scam-popup" id="scamPopup">
+  <div class="scam-box">
+    <h3>⚠️ 사칭 주의 안내</h3>
+    <p>
+      88 커뮤니티 공식 관리자 텔레그램은<br>
+      <b>@UZU59</b> 단 하나입니다.<br><br>
+      그 외 계정은 사칭일 수 있으니<br>
+      반드시 주의해 주세요.
+    </p>
+    <div class="btn" onclick="closeScam()">확인</div>
+  </div>
 </div>
 
 <!-- SEO용 숨김 H1 -->
@@ -366,28 +568,45 @@ const CARD_DATA = {
 </h1>
 
 <div class="header">
-  <!-- ✅ 로고 클릭 시 홈 이동 -->
   <a class="logoLink" href="/" aria-label="홈으로 이동">
     <img class="logoImg" src="img/logo.png" alt="88 커뮤니티 로고">
   </a>
-  <div class="sub">88 커뮤니티 : 88 입니다. </div>
+  <div class="sub">88 커뮤니티 : 88 입니다.</div>
 </div>
 
 <div class="section-wrap">
+
+  <!-- ✅ 공지/이벤트 (선택) : 배너가 있으니 섹션은 굳이 안 넣어도 됨 -->
 
   <!-- 오늘의 인사이트 -->
   <div class="section">
     <div class="title"><span class="badge">TODAY</span>오늘의 배당 인사이트</div>
     <div class="text" id="insight"></div>
+
+    <div class="insight-row">
+      <select class="insight-select" id="insightSport" aria-label="종목 선택">
+        <option value="축구">축구</option>
+        <option value="농구">농구</option>
+        <option value="야구">야구</option>
+        <option value="배구">배구</option>
+        <option value="e스포츠">e스포츠</option>
+        <option value="하키">하키</option>
+      </select>
+      <button class="insight-btn" type="button" onclick="refreshInsight()">인사이트 새로고침</button>
+    </div>
+
+    <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
+      ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
+    </div>
   </div>
 
-  <!-- 추천 기준 (커뮤니티형 + 키워드 포함) -->
+  <!-- 추천 기준 -->
   <div class="section">
     <div class="title"><span class="badge">88</span>추천 기준</div>
 
     <div class="text">
-      88은 단순히 링크를 모아두는 토토사이트 추천 페이지가 아닙니다.<br>
-      직접 이용해 본 사용자들의 의견과 운영 이력을 바탕으로,
+      88은 단순히 링크를 모아두는 추천 페이지가 아닙니다.<br>
+      사용자 의견과 운영 이력을 바탕으로,
       장기적으로 문제 없이 이용 가능한 곳만 공유합니다.
     </div>
 
@@ -399,14 +618,62 @@ const CARD_DATA = {
     </ul>
 
     <p class="text" style="margin-top:10px;">
-      입금플러스(입플) 조건이 불명확한 입플사이트,
       단기 이벤트 위주의 운영이 잦은 곳은 제외하며<br>
       출금 안정성, 대응 속도, 이용 편의성을 기준으로
-      안전한 토토사이트 및 메이저 놀이터 성격의 업체만 정리합니다.<br><br>
+      인증 성격의 업체만 정리합니다.<br><br>
       이 공간은 특정 업체를 강요하지 않고,
       각자의 기준에 맞는 선택을 돕기 위한
       커뮤니티형 안내를 목표로 합니다.
     </p>
+  </div>
+
+  <!-- ✅ 분석기 사용법 3줄 -->
+  <div class="section">
+    <div class="title"><span class="badge">GUIDE</span>분석기 사용법 (초간단)</div>
+    <div class="text">
+      ① 종목 선택 → ② 배당 입력 → ③ 결과 확인<br>
+      확률·배당 흐름·마진을 한 번에 확인합니다.<br>
+      ※ 분석기는 참고용입니다.
+    </div>
+  </div>
+
+  <!-- 최근 업데이트 로그 -->
+  <div class="section">
+    <div class="title"><span class="badge">LOG</span>최근 업데이트</div>
+    <div class="log" id="updateLog"></div>
+    <div class="text" style="margin-top:10px;color:#9a9a9a;font-size:12px;">
+      ※ 업데이트 내용은 운영 상황에 따라 변경될 수 있습니다.
+    </div>
+  </div>
+
+  <!-- FAQ -->
+  <div class="section faq">
+    <div class="title"><span class="badge">FAQ</span>자주 묻는 질문</div>
+
+    <details>
+      <summary>가입코드(추천코드)를 꼭 입력해야 하나요?</summary>
+      <div class="a">네. 대부분 업체는 <b>가입 시 최초 1회</b>만 입력 가능하며, 미입력/삭제 시 혜택 적용이 어려울 수 있습니다.</div>
+    </details>
+
+    <details>
+      <summary>분석기 결과가 무조건 적중하나요?</summary>
+      <div class="a">아니요. 분석기는 배당 흐름을 정리하는 <b>참고 도구</b>입니다. 결과는 보장하지 않으며 본인 판단이 필요합니다.</div>
+    </details>
+
+    <details>
+      <summary>사칭 계정이 많다는데, 공식 관리자 확인 방법은?</summary>
+      <div class="a">공식 관리자 텔레그램은 <b>@UZU59</b> 입니다. 그 외 계정은 사칭일 수 있으니 주의하세요.</div>
+    </details>
+
+    <details>
+      <summary>업체 이용 중 문제가 생기면 어떻게 하나요?</summary>
+      <div class="a">각 팝업의 <b>텔레그램 문의 버튼</b>을 통해 문의 가능합니다. 상황 설명과 함께 캡처를 보내주면 빠릅니다.</div>
+    </details>
+
+    <details>
+      <summary>‘88 인증 놀이터’ 기준은 무엇인가요?</summary>
+      <div class="a">운영 안정성, 정산 신뢰도, 실사용 후기, 고객 대응 등을 종합해 선별합니다. 단기 이벤트만 강조하는 곳은 제외합니다.</div>
+    </details>
   </div>
 
   <!-- 분석기 -->
@@ -420,7 +687,7 @@ const CARD_DATA = {
 
 <!-- 인증업체 목록 안내 -->
 <div class="vendor-header">
-  <h2>88 인증 놀이터 목록</h2>
+  <h2>88 인증 놀이터 </h2>
   <p>검증된 메이저 사이트만 선별 안내합니다</p>
 </div>
 
@@ -431,8 +698,8 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img1.jpg" alt="B WIN"></div>
     <div class="content">
       <div class="site">B WIN</div>
-      <div class="desc"> </div>
-      <div class="code">88 인증 놀이터 </div>
+      <div class="desc"></div>
+      <div class="code">88 인증 놀이터</div>
     </div>
   </div>
 
@@ -440,7 +707,7 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img2.jpg" alt="CAPS"></div>
     <div class="content">
       <div class="site">CAPS</div>
-      <div class="desc"> </div>
+      <div class="desc"></div>
       <div class="code">88 인증 놀이터</div>
     </div>
   </div>
@@ -449,7 +716,7 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img3.jpg" alt="BETZY"></div>
     <div class="content">
       <div class="site">BETZY</div>
-      <div class="desc"> </div>
+      <div class="desc"></div>
       <div class="code">88 인증 놀이터</div>
     </div>
   </div>
@@ -458,7 +725,7 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img4.jpg" alt="VEGAS"></div>
     <div class="content">
       <div class="site">VEGAS</div>
-      <div class="desc"> </div>
+      <div class="desc"></div>
       <div class="code">88 인증 놀이터</div>
     </div>
   </div>
@@ -467,7 +734,7 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img5.jpg" alt="LULA BET"></div>
     <div class="content">
       <div class="site">LULA BET</div>
-      <div class="desc"> </div>
+      <div class="desc"></div>
       <div class="code">88 인증 놀이터</div>
     </div>
   </div>
@@ -476,7 +743,7 @@ const CARD_DATA = {
     <div class="img-box"><img src="img/img6.jpg" alt="CHOY BET"></div>
     <div class="content">
       <div class="site">CHOY BET</div>
-      <div class="desc"> </div>
+      <div class="desc"></div>
       <div class="code">88 인증 놀이터</div>
     </div>
   </div>
@@ -485,8 +752,8 @@ const CARD_DATA = {
 
 <!-- 방문자 -->
 <div id="visitorBox">
-  전체 방문자 : <b id="total">집계중…</b> /
-  금일 방문자 : <b id="today">집계중…</b>
+  전체 방문자 : <b id="total">0</b> /
+  금일 방문자 : <b id="today">0</b>
 </div>
 
 <!-- 카드 팝업 -->
@@ -519,13 +786,101 @@ function hideLoader(){
 window.addEventListener("load", hideLoader);
 setTimeout(hideLoader, 2500);
 
-/* 오늘의 인사이트 */
-const INS=[
-  "배당이 급변하면 정보 반영 구간일 수 있습니다.",
-  "낮은 배당보다 흐름 변화를 우선 확인하세요.",
-  "확률보다 시장 반응을 먼저 보세요."
+/* ✅ 사칭주의 팝업 (1일 1회) */
+(function(){
+  const key="scam_popup_date";
+  const today=new Date().toISOString().slice(0,10);
+  if(localStorage.getItem(key)!==today){
+    document.getElementById("scamPopup").style.display="flex";
+  }
+})();
+function closeScam(){
+  const today=new Date().toISOString().slice(0,10);
+  localStorage.setItem("scam_popup_date",today);
+  document.getElementById("scamPopup").style.display="none";
+}
+
+/* ✅ 상단 공지 배너 자동 순환 */
+const NOTICE_LIST = [
+  "🔔 88 커뮤니티 공식 안내 · 관리자 사칭 주의 (@UZU59)",
+  "📊 88 스포츠 배당 분석기 무료 제공 중",
+  "⭐ 검증된 88 인증 놀이터만 안내합니다",
+  "⚠️ 가입코드 미입력 시 혜택 적용 불가"
 ];
-document.getElementById("insight").innerText = INS[Math.floor(Math.random()*INS.length)];
+let noticeIndex = 0;
+const noticeTextEl = document.getElementById("noticeText");
+function rotateNotice(){
+  noticeTextEl.innerText = NOTICE_LIST[noticeIndex];
+  noticeIndex = (noticeIndex + 1) % NOTICE_LIST.length;
+}
+rotateNotice();
+setInterval(rotateNotice, 4000);
+
+/* ✅ 인사이트: 종목별 랜덤 */
+function pickInsight(sport){
+  const arr = INSIGHTS_BY_SPORT[sport] || [];
+  if(!arr.length) return "배당 흐름을 체크하고 라인 변화를 확인하세요.";
+  return arr[Math.floor(Math.random()*arr.length)];
+}
+function refreshInsight(){
+  const sport = document.getElementById("insightSport").value;
+  document.getElementById("insight").innerText = pickInsight(sport);
+  localStorage.setItem("insightSport", sport);
+}
+(function initInsight(){
+  const saved = localStorage.getItem("insightSport");
+  if(saved && document.getElementById("insightSport")){
+    document.getElementById("insightSport").value = saved;
+  }
+  refreshInsight();
+})();
+
+/* ✅ 최근 업데이트 로그 (여기만 수정하면 운영 가능) */
+const UPDATE_LOG = [
+  { date:"02/01", text:"메인 화면 UI 개선 및 카드 정리" },
+  { date:"02/01", text:"스포츠 배당 분석기 버튼 추가" },
+  { date:"02/01", text:"FAQ/사칭주의/공지 배너 기능 강화" }
+];
+(function renderLog(){
+  const box = document.getElementById("updateLog");
+  if(!box) return;
+  box.innerHTML = UPDATE_LOG.map(x=>`
+    <div class="log-item">
+      <div class="log-date">${x.date}</div>
+      <div class="log-text">${x.text}</div>
+    </div>
+  `).join("");
+})();
+
+/* ✅ 방문자(로컬) - 무조건 표시 + 새로고침 중복 방지(10분) */
+(function(){
+  const totalEl = document.getElementById("total");
+  const todayEl = document.getElementById("today");
+  if(!totalEl || !todayEl) return;
+
+  const today = new Date().toISOString().slice(0,10); // YYYY-MM-DD
+  const totalKey = "v_total";
+  const todayKey = "v_today_" + today;
+
+  const now = Date.now();
+  const guardKey = "v_guard";
+  const last = Number(localStorage.getItem(guardKey) || 0);
+  const TEN_MIN = 10 * 60 * 1000;
+
+  let total = Number(localStorage.getItem(totalKey) || 0);
+  let todayCount = Number(localStorage.getItem(todayKey) || 0);
+
+  if(now - last > TEN_MIN){
+    total += 1;
+    todayCount += 1;
+    localStorage.setItem(totalKey, String(total));
+    localStorage.setItem(todayKey, String(todayCount));
+    localStorage.setItem(guardKey, String(now));
+  }
+
+  totalEl.innerText = total;
+  todayEl.innerText = todayCount;
+})();
 
 /* 이미지 블러 배경 세팅 + 로딩 실패 대응 */
 document.querySelectorAll(".img-box").forEach(box=>{
@@ -573,37 +928,6 @@ function copyCode(){
   alert("가입코드가 복사되었습니다");
 }
 
-/* 방문자 CountAPI (전체/금일) - ✅ 안 뜨는 문제 대비 강화 */
-const NS = "88st-cloud";
-
-async function hitCount(key){
-  const url = `https://api.countapi.xyz/hit/${encodeURIComponent(NS)}/${encodeURIComponent(key)}`;
-  const res = await fetch(url, { cache: "no-store" });
-  if(!res.ok) throw new Error("CountAPI HTTP " + res.status);
-  const data = await res.json();
-  if(typeof data.value !== "number") throw new Error("CountAPI invalid response");
-  return data.value;
-}
-
-(async ()=>{
-  try{
-    const total = await hitCount("total");
-    document.getElementById("total").innerText = total;
-  }catch(e){
-    console.log("CountAPI total error:", e);
-    document.getElementById("total").innerText = "-";
-  }
-
-  try{
-    const todayKey = "visit-" + new Date().toISOString().slice(0,10);
-    const today = await hitCount(todayKey);
-    document.getElementById("today").innerText = today;
-  }catch(e){
-    console.log("CountAPI today error:", e);
-    document.getElementById("today").innerText = "-";
-  }
-})();
-
 /* 카드 랜덤 정렬: high(1~3) 우선 상단 */
 (()=>{
   const grid = document.getElementById("vendorGrid");
@@ -618,5 +942,3 @@ async function hitCount(key){
 
 </body>
 </html>
-
-
