--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ const INSIGHTS_BY_SPORT = {
   <a class="logoLink" href="/" aria-label="홈으로 이동">
     <img class="logoImg" src="img/logo.png" alt="88 커뮤니티 로고">
   </a>
-  <div class="sub">88 커뮤니티 : 88 입니다.</div>
+  <div class="sub"> 88 커뮤니티를 찾아주셔서 감사합니다. 더욱 더 발전하는 88 커뮤니티가 되겠습니다.</div>
 </div>
 
 <div class="section-wrap">
@@ -580,7 +580,7 @@ const INSIGHTS_BY_SPORT = {
 
   <!-- 오늘의 인사이트 -->
   <div class="section">
-    <div class="title"><span class="badge">TODAY</span>오늘의 배당 인사이트</div>
+    <div class="title"><span class="badge">TODAY</span>오늘의 인사이트</div>
     <div class="text" id="insight"></div>
 
     <div class="insight-row">
@@ -942,3 +942,4 @@ function copyCode(){
 
 </body>
 </html>
+
