--- a/index.html
+++ b/index.html
@@ -489,12 +489,12 @@ const CARD_DATA = {
     notice:"가입코드 미입력 시 혜택 적용 불가" },
 
   /* ✅ 추가 광고 카드 2개 (card7, card8) */
-  card7:{ title:"AD SITE 7", code:"", link:"https://example7.com", telegram:"UZU59",
-    benefit:"광고/제휴 안내 문구를 여기에 작성",
-    notice:"이 카드는 광고/제휴용입니다. 이용 전 조건을 확인하세요." },
-  card8:{ title:"AD SITE 8", code:"", link:"https://example8.com", telegram:"UZU59",
-    benefit:"광고/제휴 안내 문구를 여기에 작성",
-    notice:"이 카드는 광고/제휴용입니다. 이용 전 조건을 확인하세요." }
+  card7:{ title:"입점문의", code:"", link:"https://example7.com", telegram:"UZU59",
+    benefit:"광고/제휴 ",
+    notice:"입점문의" },
+  card8:{ title:"입점문의", code:"", link:"https://example8.com", telegram:"UZU59",
+    benefit:"광고/제휴 ",
+    notice:"입점문의" }
 };
 
 /* ===== 인사이트 (종목별) ===== */
@@ -971,3 +971,4 @@ function copyCode(){
 
 </body>
 </html>
+
