--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
@@ -275,6 +275,17 @@ select.insight-select{
   background:linear-gradient(135deg,#1da1f2,#78d6ff);
 }
 
+/* ✅ 섹션 내 입력 공통 (마진 계산기용) */
+.section input{
+  padding:12px;
+  border-radius:12px;
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(0,0,0,.35);
+  color:#fff;
+  font-weight:800;
+  outline:none;
+}
+
 /* ===== 보증업체 안내 UI ===== */
 .vendor-header{
   text-align:center;
@@ -486,15 +497,7 @@ const CARD_DATA = {
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card6:{ title:"CHOY BET", code:"TAN", link:"https://cy-40.com", telegram:"DY0302",
     benefit:"신규 30% / 매충 10% / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-
-  /* ✅ 추가 광고 카드 2개 (card7, card8) */
-  card7:{ title:"입점문의", code:"", link:"https://example7.com", telegram:"UZU59",
-    benefit:"광고/제휴 ",
-    notice:"입점문의" },
-  card8:{ title:"입점문의", code:"", link:"https://example8.com", telegram:"UZU59",
-    benefit:"광고/제휴 ",
-    notice:"입점문의" }
+    notice:"가입코드 미입력 시 혜택 적용 불가" }
 };
 
 /* ===== 인사이트 (종목별) ===== */
@@ -579,7 +582,7 @@ const INSIGHTS_BY_SPORT = {
   <a class="logoLink" href="/" aria-label="홈으로 이동">
     <img class="logoImg" src="img/logo.png" alt="88 커뮤니티 로고">
   </a>
-  <div class="sub"> 88 커뮤니티를 찾아주셔서 감사합니다.</div>
+  <div class="sub">88 커뮤니티를 찾아주셔서 감사합니다.</div>
 </div>
 
 <div class="section-wrap">
@@ -603,6 +606,37 @@ const INSIGHTS_BY_SPORT = {
 
     <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
       ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
+    </div>
+  </div>
+
+  <!-- ✅ 배팅 체크리스트 (랜덤 3줄) -->
+  <div class="section">
+    <div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
+    <div class="text" id="checklistText"></div>
+    <button class="insight-btn" type="button" onclick="refreshChecklist()" style="margin-top:10px;">
+      체크리스트 새로고침
+    </button>
+    <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
+      ※ 과몰입 방지/리스크 관리용 안내입니다.
+    </div>
+  </div>
+
+  <!-- ✅ 배당 마진 계산기 (초간단) -->
+  <div class="section">
+    <div class="title"><span class="badge">TOOL</span>배당 마진 계산기 (초간단)</div>
+    <div class="text" style="margin-bottom:10px;">
+      1X2(승/무/패) 배당 3개 입력 → 북메이커 마진(수수료)을 계산합니다.
+    </div>
+
+    <div style="display:grid; gap:10px;">
+      <input id="oddsA" inputmode="decimal" placeholder="승 배당 (예: 1.85)">
+      <input id="oddsB" inputmode="decimal" placeholder="무 배당 (예: 3.40)">
+      <input id="oddsC" inputmode="decimal" placeholder="패 배당 (예: 4.20)">
+
+      <button class="insight-btn" type="button" onclick="calcMargin()">마진 계산</button>
+
+      <div class="text" id="marginResult" style="font-weight:900;color:#f5e27a;"></div>
+      <div class="text" id="marginHint" style="color:#bdbdbd;font-size:12px;"></div>
     </div>
   </div>
 
@@ -693,7 +727,7 @@ const INSIGHTS_BY_SPORT = {
 
 <!-- 인증업체 목록 안내 -->
 <div class="vendor-header">
-  <h2>88 인증 놀이터 </h2>
+  <h2>88 인증 놀이터</h2>
   <p>검증된 메이저 사이트만 선별 안내합니다</p>
 </div>
 
@@ -754,26 +788,6 @@ const INSIGHTS_BY_SPORT = {
     </div>
   </div>
 
-  <!-- ✅ 추가 카드 7 -->
-  <div class="card" data-priority="normal" data-card="card8" onclick="openById(this)">
-    <div class="img-box"><img src="img/img8.jpg" alt="AD SITE 8"></div>
-    <div class="content">
-      <div class="site">광고/제휴</div>
-      <div class="desc"></div>
-      <div class="code">광고/제휴</div>
-    </div>
-  </div>
-
-  <!-- ✅ 추가 카드 8 -->
-  <div class="card" data-priority="normal" data-card="card8" onclick="openById(this)">
-    <div class="img-box"><img src="img/img8.jpg" alt="AD SITE 8"></div>
-    <div class="content">
-      <div class="site">광고/제휴</div>
-      <div class="desc"></div>
-      <div class="code">광고/제휴</div>
-    </div>
-  </div>
-
 </div>
 
 <!-- 방문자 -->
@@ -830,6 +844,7 @@ function closeScam(){
 const NOTICE_LIST = [
   "🔔 88 커뮤니티 공식 안내 · 관리자 사칭 주의 (@UZU59)",
   "📊 88 스포츠 배당 분석기 무료 제공 중",
+  "📊 88 스포츠 마진 계산기 무료 제공 중",
   "⭐ 검증된 88 인증 놀이터만 안내합니다",
   "⚠️ 가입코드 미입력 시 혜택 적용 불가"
 ];
@@ -861,7 +876,60 @@ function refreshInsight(){
   refreshInsight();
 })();
 
-/* ✅ 최근 업데이트 로그 (여기만 수정하면 운영 가능) */
+/* ✅ 배팅 체크리스트 (랜덤 3줄) */
+const CHECKLIST_POOL = [
+  "라인 급변 경기(갑자기 내려간 배당)는 이유부터 확인하기",
+  "마진(수수료) 높은 경기면 한 단계 보수적으로 접근하기",
+  "1회 배팅금은 자본의 1~3% 범위로 제한하기",
+  "선발/결장/로테 뉴스 체크 후 배당 변동 재확인하기",
+  "연패/연승 팀은 '시장 과열' 구간인지 먼저 보기",
+  "변동성 큰 리그는 단폴/소액으로 테스트하기"
+];
+function refreshChecklist(){
+  const pool = [...CHECKLIST_POOL].sort(()=>Math.random()-0.5);
+  const pick = pool.slice(0,3);
+  document.getElementById("checklistText").innerHTML = "• " + pick.join("<br>• ");
+}
+refreshChecklist();
+
+/* ✅ 배당 마진 계산기 (초간단 1X2) */
+function toNum(v){
+  const n = Number(String(v).replace(/,/g,"").trim());
+  return Number.isFinite(n) ? n : NaN;
+}
+function calcMargin(){
+  const a = toNum(document.getElementById("oddsA").value);
+  const b = toNum(document.getElementById("oddsB").value);
+  const c = toNum(document.getElementById("oddsC").value);
+
+  const out = document.getElementById("marginResult");
+  const hint = document.getElementById("marginHint");
+
+  if([a,b,c].some(x=>!Number.isFinite(x) || x<=1)){
+    out.innerText = "배당 3개를 정확히 입력해 주세요. (1.01 이상)";
+    hint.innerText = "";
+    return;
+  }
+
+  const imp = (1/a) + (1/b) + (1/c);
+  const margin = (imp - 1) * 100;
+
+  const fairFactor = 1 / imp;
+  const pA = (1/a) * fairFactor * 100;
+  const pB = (1/b) * fairFactor * 100;
+  const pC = (1/c) * fairFactor * 100;
+
+  let tag = "양호";
+  if(margin >= 7) tag = "주의";
+  if(margin >= 10) tag = "고마진(비추천)";
+
+  out.innerText = `마진(수수료) : ${margin.toFixed(2)}%`;
+  hint.innerHTML =
+    `정규화 확률(참고): 승 ${pA.toFixed(1)}% / 무 ${pB.toFixed(1)}% / 패 ${pC.toFixed(1)}%<br>` +
+    `판정: <b>${tag}</b> (마진이 낮을수록 유리)`;
+}
+
+/* ✅ 최근 업데이트 로그 */
 const UPDATE_LOG = [
   { date:"02/01", text:"메인 화면 UI 개선 및 카드 정리" },
   { date:"02/01", text:"스포츠 배당 분석기 버튼 추가" },
@@ -884,7 +952,7 @@ const UPDATE_LOG = [
   const todayEl = document.getElementById("today");
   if(!totalEl || !todayEl) return;
 
-  const today = new Date().toISOString().slice(0,10); // YYYY-MM-DD
+  const today = new Date().toISOString().slice(0,10);
   const totalKey = "v_total";
   const todayKey = "v_today_" + today;
 
@@ -949,10 +1017,7 @@ function closeCard(){
   document.getElementById("cardPopup").style.display = "none";
 }
 function copyCode(){
-  if(!currentCode){
-    alert("복사할 가입코드가 없습니다.");
-    return;
-  }
+  if(!currentCode) return;
   navigator.clipboard.writeText(currentCode);
   alert("가입코드가 복사되었습니다");
 }
@@ -971,4 +1036,3 @@ function copyCode(){
 
 </body>
 </html>
-
