--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ const INSIGHTS_BY_SPORT = {
 
   <!-- ✅✅ 분석기 버튼/섹션을 상단으로 이동 완료 -->
   <div class="section">
-    <div class="title"><span class="badge">FREE</span>스포츠 배당 분석기</div>
+    <div class="title"><span class="badge">88</span>스포츠 배당 분석기</div>
     <div class="text">배당 흐름을 간단히 확인할 수 있는 분석기입니다.</div>
     <a class="analyze-btn" href="analysis.html">분석기 이동</a>
   </div>
@@ -635,7 +635,7 @@ const INSIGHTS_BY_SPORT = {
 
   <!-- 분석기 사용법 3줄 -->
   <div class="section">
-    <div class="title"><span class="badge">GUIDE</span>분석기 사용법 (초간단)</div>
+    <div class="title"><span class="badge">GUIDE</span>분석기 사용법 </div>
     <div class="text">
       ① 종목 선택 → ② 배당 입력 → ③ 결과 확인<br>
       확률·배당 흐름·마진을 한 번에 확인합니다.<br>
@@ -952,3 +952,4 @@ function copyCode(){
 
 </body>
 </html>
+
