--- a/index.html
+++ b/index.html
@@ -580,9 +580,9 @@ const INSIGHTS_BY_SPORT = {
 
   <!-- ✅✅ 분석기 버튼/섹션을 상단으로 이동 완료 -->
   <div class="section">
-    <div class="title"><span class="badge">88</span>스포츠 배당 분석기</div>
-    <div class="text">배당 흐름을 간단히 확인할 수 있는 분석기입니다.</div>
-    <a class="analyze-btn" href="analysis.html">분석기 이동</a>
+    <div class="title"><span class="badge"> 88 </span>스포츠 배당 분석기 x 마진 계산기</div>
+    <div class="text">배당 흐름을 간단히 확인할 수 있는 분석기, 마진 계산을 통하여 수익 실현  </div>
+    <a class="analyze-btn" href="analysis.html">스포츠 분석 x 마진 계산기 클릭</a>
   </div>
 
   <!-- 오늘의 인사이트 -->
@@ -952,4 +952,5 @@ function copyCode(){
 
 </body>
 </html>
+
 
