--- a/analysis.html
+++ b/analysis.html
@@ -206,32 +206,6 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 .pill.warn{ color:#111; background:linear-gradient(135deg,#ffd36a,#ffe9b0); border:none; }
 .pill.bad{ color:#111; background:linear-gradient(135deg,#ff7a7a,#ffb3b3); border:none; }
 
-/* ✅ 전환 섹션 */
-.cta{
-  margin-top:12px;
-  padding:12px;
-  border-radius:16px;
-  background:rgba(212,175,55,.08);
-  border:1px solid rgba(245,226,122,.22);
-}
-.cta b{ color:#f5e27a; }
-.cta .btnrow{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
-.cta a{
-  flex:1; min-width:160px;
-  display:block; text-align:center;
-  padding:12px; border-radius:14px;
-  text-decoration:none; font-weight:900;
-}
-.cta .goVendor{
-  background:linear-gradient(135deg,#d4af37,#f5e27a);
-  color:#111;
-}
-.cta .tg{
-  background:#1f1f1f; color:#fff;
-  border:1px solid rgba(255,255,255,.08);
-}
-
-  
 /* 체크리스트 */
 .bullets{ color:#cfcfcf; font-size:13px; line-height:1.55; }
 .bullets b{ color:var(--gold2); }
@@ -308,7 +282,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   <a class="logo-link" href="./" aria-label="홈으로 이동">
     <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
   </a>
-  <div class="sub">스포츠 배당 분석기 x 마진 계산기 </div>
+  <div class="sub">스포츠 배당 분석기 (템플릿 · 선택입력 · 판단 보조용)</div>
 </div>
 
 <div class="wrap">
@@ -556,20 +530,6 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
     </div>
 
     <div class="result" id="result" style="display:none;"></div>
-<!-- ✅ 보증업체 전환 섹션 -->
-<div class="cta" id="vendorCTA" style="display:none;">
-  <div style="font-weight:900; margin-bottom:6px;">📌 분석 끝 → 이제 선택만 남았습니다</div>
-  <div style="font-size:13px; color:#cfcfcf; line-height:1.55;">
-    <b>같은 분석이라도, 배팅 환경에 따라 결과는 달라집니다.</b><br>
-    ✔ 지연 없는 배당 반영 · ✔ 출금 이슈 없는 곳 · ✔ 고액 유저 기준 검증<br>
-    👉 <b>88 인증 놀이터</b>에서 이용하세요.
-  </div>
-  
-  <div class="btnrow">
-    <a class="goVendor" href="./#vendors">88 인증 놀이터 보기</a>
-    <a class="tg" href="https://t.me/UZU59" target="_blank" rel="noopener">문의(텔레그램)</a>
-  </div>
-</div>
 
     <div class="footer-links">
       <a class="linkbtn" href="./">홈으로</a>
