--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ const INSIGHTS_BY_SPORT = {
   <div class="section">
     <div class="title"><span class="badge"> 88 </span>스포츠 배당 분석기 x 마진 계산기</div>
     <div class="text">배당 흐름을 간단히 확인할 수 있는 분석기, 마진 계산을 통하여 수익 실현  </div>
-    <a class="analyze-btn" href="analysis.html">스포츠 분석 x 마진 계산기 클릭</a>
+   <a class="analyze-btn" href="/analysis/">스포츠 분석 x 마진 계산기 클릭</a>
   </div>
 
   <!-- 오늘의 인사이트 -->
