--- a/analysis/index.html
+++ b/analysis/index.html
@@ -500,7 +500,7 @@ hr.sep{
 <!-- ✅ 로딩 화면 -->
 <div id="loader">
   <div class="logoWrap">
-    <img src="img/logo-88-community.png" alt="88 로고 로딩">
+    <img src="/img/logo-88-community.png" alt="88 로고 로딩">
   </div>
   <div class="text">Loading...</div>
 </div>
@@ -546,7 +546,7 @@ hr.sep{
 
 <div class="header">
   <a class="logo-link" href="./" aria-label="홈으로 이동">
-    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
+   <img src="/img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
   </a>
   <div class="sub">스포츠 배당 분석기 (통합형 · 히스토리/마진/EV/비교)</div>
 </div>
