--- a/analysis/index.html
+++ b/analysis/index.html
@@ -797,7 +797,7 @@ hr.sep{
     <div class="result" id="result" style="display:none;"></div>
 
     <div class="footer-links">
-      <a class="linkbtn" href="./">홈으로</a>
+      <a class="linkbtn" href="/">홈으로</a>
       <a class="linkbtn" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
     </div>
   </div>
