--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ const INSIGHTS_BY_SPORT = {
   <div class="section" id="analyzerSection">
     <div class="title"><span class="badge">FREE</span>스포츠 배당 분석기</div>
     <div class="text">배당 흐름·마진·EV를 간단히 확인할 수 있는 분석기입니다.</div>
-    <a class="analyze-btn" href="analysis.html">분석기 이동</a>
+    <a class="analyze-btn" href="analysis/index.html">분석기 이동</a>
   </div>
 
   <!-- ✅ 상단 2단 레이아웃 (좌: 도구/콘텐츠 · 우: 안내/공지) -->
