--- a/casino/index.html
+++ b/casino/index.html
@@ -91,7 +91,7 @@ small.muted{color:#9a9a9a}
 </div>
 
 <div id="loader">
-  <div class="logoWrap"><img src="../img/logo.png" alt="88 로고 로딩"></div>
+  <div class="logoWrap"><img src="././img/logo.png" alt="88 로고 로딩"></div>
   <div class="text">Loading...</div>
 </div>
 
@@ -118,7 +118,7 @@ small.muted{color:#9a9a9a}
     <a href="../slot/">슬롯</a>
   </div>
 
-  <a class="logoLink" href="../" aria-label="홈으로 이동">
+  <a class="logoLink" href="././" aria-label="홈으로 이동">
     <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
@@ -143,7 +143,7 @@ small.muted{color:#9a9a9a}
         <b>팁:</b> “페이백 %”보다 <b>정산 속도/제한 투명성</b>이 더 중요할 때가 많습니다.
       </div>
       <div class="btnRow">
-        <a class="btn blue" href="../analysis.html">분석기(마진/EV)</a>
+        <a class="btn blue" href="../analysis">분석기(마진/EV)</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">문의(텔레그램)</a>
       </div>
     </div>
@@ -235,3 +235,4 @@ setInterval(rotateNotice,4200);
 </script>
 </body>
 </html>
+
