--- a/ipl/index.html
+++ b/ipl/index.html
@@ -186,7 +186,7 @@ input{
 </div>
 
 <div id="loader">
-  <div class="logoWrap"><img src="../img/logo.png" alt="88 로고 로딩"></div>
+  <div class="logoWrap"><img src="././img/logo.png" alt="88 로고 로딩"></div>
   <div class="text">Loading...</div>
 </div>
 
@@ -206,14 +206,14 @@ input{
 <div class="header">
   <div class="nav">
     <a href="../">메인</a>
-    <a href="../analysis.html">분석기</a>
+    <a href="../analysis">분석기</a>
     <a class="active" href="./">입플/보너스</a>
     <a href="../minigame/">동행 미니게임</a>
     <a href="../casino/">카지노</a>
     <a href="../slot/">슬롯</a>
   </div>
 
-  <a class="logoLink" href="../" aria-label="홈으로 이동">
+  <a class="logoLink" href="././" aria-label="홈으로 이동">
     <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
@@ -239,7 +239,7 @@ input{
       </div>
 
       <div class="btnRow">
-        <a class="btn blue" href="../analysis.html">마진·EV 분석기 사용</a>
+        <a class="btn blue" a href="/analysis/">마진·EV 분석기 사용</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">조건 문의(텔레그램)</a>
       </div>
     </div>
@@ -345,3 +345,4 @@ setInterval(rotateNotice, 4200);
 </script>
 </body>
 </html>
+
