--- a/casino/index.html
+++ b/casino/index.html
@@ -143,7 +143,7 @@ small.muted{color:#9a9a9a}
         <b>팁:</b> “페이백 %”보다 <b>정산 속도/제한 투명성</b>이 더 중요할 때가 많습니다.
       </div>
       <div class="btnRow">
-        <a class="btn blue" <a href="/analysis/">분석기(마진/EV)</a>
+        <a class="btn blue" a href="/analysis/">분석기(마진/EV)</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">문의(텔레그램)</a>
       </div>
     </div>
@@ -235,5 +235,6 @@ setInterval(rotateNotice,4200);
 </script>
 </body>
 </html>
+
 
 
