--- a/minigame/index.html
+++ b/minigame/index.html
@@ -125,7 +125,7 @@ small.muted{color:#9a9a9a}
     <a href="../slot/">슬롯</a>
   </div>
 
-  <a class="logoLink" href="../" aria-label="홈으로 이동">
+  <a class="logoLink" href="././" aria-label="홈으로 이동">
     <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
@@ -155,7 +155,7 @@ small.muted{color:#9a9a9a}
       </ul>
 
       <div class="btnRow">
-        <a class="btn blue" href="../analysis.html">배당·마진·EV 분석기</a>
+        <a class="btn blue" a href="/analysis/">배당·마진·EV 분석기</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">조건/문의(텔레그램)</a>
       </div>
     </div>
@@ -252,3 +252,4 @@ setInterval(rotateNotice,4200);
 </script>
 </body>
 </html>
+
