--- a/analysis/index.html
+++ b/analysis/index.html
@@ -93,7 +93,7 @@ body{
   width:180px; max-width:72%; height:auto;
   filter:drop-shadow(0 0 10px rgba(212,175,55,.25));
 }
-@media(max-width:480px){ .logo-88-community.png{width:150px;max-width:82%} }
+@media(max-width:480px){ .logo-img{width:150px;max-width:82%} }
 .sub{ font-size:12px; color:#9a9a9a; }
 
 /* 레이아웃 */
@@ -509,7 +509,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 
 <div class="header">
   <a class="logo-link" href="/" aria-label="홈으로 이동">
-    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-88-community.png">
+    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
   </a>
   <div class="sub">스포츠 배당 분석기 (완전체 · 통합 마진/EV/히스토리 · 판단 보조용)</div>
 </div>
