--- a/analysis/index.html
+++ b/analysis/index.html
@@ -509,7 +509,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 
 <div class="header">
   <a class="logo-link" href="/" aria-label="홈으로 이동">
-    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
+    <img src="img/logo-88-community" alt="88 커뮤니티" class="logo-img">
   </a>
   <div class="sub">스포츠 배당 분석기 (완전체 · 통합 마진/EV/히스토리 · 판단 보조용)</div>
 </div>
