--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
+  <!-- ✅ Google Analytics 4 (GA4) - 88st.cloud -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  // 기본 페이지뷰
+  gtag('config', 'G-KWT87FBY6S', {
+    anonymize_ip: true
+  });
+</script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- ===== SEO 기본 세팅 (균형형 C) ===== -->
