--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-  <!-- ✅ Google Analytics 4 (GA4) - 88st.cloud -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  // 기본 페이지뷰
-  gtag('config', 'G-KWT87FBY6S', {
-    anonymize_ip: true
-  });
-</script>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- ===== SEO 기본 세팅 (균형형 C) ===== -->
@@ -637,146 +624,33 @@ html{ scroll-behavior:smooth; }
 <script>
 /* ===== 카드 데이터 (✅ card7, card8 광고모집 추가) ===== */
 const CARD_DATA = {
-  card1:{
-    title:"B WIN",
-    code:"AS88",
-    link:"https://bwk999.com",
-    telegram:"UZU59",
+  card1:{ title:"B WIN", code:"AS88", link:"https://bwk999.com", telegram:"UZU59",
     benefit:"고액전용 USDT 무기명가입 수수료지원 / 모든게임 입금플러스",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"high",
-    reasons:[
-      "고액 유저 기준 검증 + 운영 안정성 우선",
-      "입금플러스/수수료 지원 등 혜택 조건 명확",
-      "문의/대응 라인 확실(텔레그램 연결)"
-    ]
-  },
-  card2:{
-    title:"CAPS",
-    code:"RUST",
-    link:"https://caps-22.com",
-    telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+  card2:{ title:"CAPS", code:"RUST", link:"https://caps-22.com", telegram:"UZU59",
     benefit:"고액전용 미겜 첫충 5% / 페이백 5% / 출석 30만원",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"high",
-    reasons:[
-      "미니게임/스포츠 동시 이용 유저 비중 높음",
-      "첫충/페이백 등 보너스 구조가 깔끔",
-      "고객 응대 및 정산 안정성 후기 반영"
-    ]
-  },
-  card3:{
-    title:"BETZY",
-    code:"BANGU",
-    link:"https://b88-et.com",
-    telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+  card3:{ title:"BETZY", code:"BANGU", link:"https://b88-et.com", telegram:"UZU59",
     benefit:"스포츠 첫 10% / 미겜 첫 5% / 페이백 5%",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"신규",
-    badgeText:"신규",
-    badgeCls:"new",
-    priority:"high",
-    reasons:[
-      "스포츠/미니게임 밸런스형 혜택 구성",
-      "가입코드 기준 혜택 적용 정책 명확",
-      "커뮤니티 제보 기반으로 지속 모니터링"
-    ]
-  },
-  card4:{
-    title:"VEGAS",
-    code:"6789",
-    link:"https://las403.com",
-    telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+  card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
     benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"검증",
-    badgeText:"검증",
-    badgeCls:"verified",
-    priority:"normal",
-    reasons:[
-      "카지노/슬롯 이용 유저 전환이 높음",
-      "입플/보너스 조건 공지 및 적용 라인 명확",
-      "장기 운영 이력 기반으로 선별"
-    ]
-  },
-  card5:{
-    title:"LULA BET",
-    code:"ZZ99",
-    link:"https://lula.ws",
-    telegram:"PSC991",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+  card5:{ title:"LULA BET", code:"ZZ99", link:"https://lula.ws", telegram:"PSC991",
     benefit:"원화·USDT 무기명가입 / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"고액",
-    badgeText:"고액",
-    badgeCls:"gold",
-    priority:"normal",
-    reasons:[
-      "무기명/USDT 등 고액 동선에 강점",
-      "페이백 등 리베이트 성격 혜택 제공",
-      "고액 유저 기준 응대/정산 체크"
-    ]
-  },
-  card6:{
-    title:"CHOY BET",
-    code:"TAN",
-    link:"https://cy-40.com",
-    telegram:"DY0302",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+  card6:{ title:"CHOY BET", code:"TAN", link:"https://cy-40.com", telegram:"DY0302",
     benefit:"신규 30% / 매충 10% / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"normal",
-    reasons:[
-      "신규/매충/페이백 등 보너스 구성이 강함",
-      "미니게임/카지노 유저 전환이 빠름",
-      "문의 라인 분리 운영으로 대응 속도 확보"
-    ]
-  },
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
 
-  /* ✅ 광고 모집(자리) — 카드7/8 */
-  card7:{
-    title:"광고 모집 (자리 1)",
-    code:"-",
-    link:"#",
-    telegram:"UZU59",
-    benefit:"메인 카드 광고 제휴를 원하시면 문의 주세요.",
-    notice:"광고/제휴 문의 전용 카드입니다.",
-    tag:"광고",
-    badgeText:"광고",
-    badgeCls:"ad",
-    priority:"ad",
-    recruit:true,
-    reasons:[
-      "메인 상단 노출(클릭/전환 강화)",
-      "텔레그램 유입 동선 포함",
-      "고정 배너/카드 문구 커스텀 가능"
-    ]
-  },
-  card8:{
-    title:"광고 모집 (자리 2)",
-    code:"-",
-    link:"#",
-    telegram:"UZU59",
-    benefit:"입플/보너스/페이백 강점 업체 우선 모집",
-    notice:"광고/제휴 문의 전용 카드입니다.",
-    tag:"광고",
-    badgeText:"광고",
-    badgeCls:"ad",
-    priority:"ad",
-    recruit:true,
-    reasons:[
-      "메인/랜딩/딥링크 동시 지원",
-      "주간 리포트(클릭/유입) 제공 가능",
-      "업체별 추천 문구 3줄 자동 표시"
-    ]
-  }
+  /* ✅ 광고 모집 카드 */
+  card7:{ title:"광고/제휴 모집", code:"", link:"", telegram:"UZU59",
+    benefit:"88 커뮤니티에 광고/제휴를 원하시면 문의 주세요.",
+    notice:"광고 문의는 텔레그램 @UZU59 로만 진행합니다." },
+
+  card8:{ title:"광고 자리 오픈", code:"", link:"", telegram:"UZU59",
+    benefit:"배너/카드 광고 자리 오픈 · 합리적 조건",
+    notice:"사칭 주의: 공식 관리자 @UZU59 단 하나" }
 };
 
 /* ===== 인사이트 (종목별) ===== */
